Fixed bug with rows aligning to centre all the time

--- a/css/styles.css
+++ b/css/styles.css
@@ -362,15 +362,13 @@ a:hover {
 }
 
 .row {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    margin: 5px;
 }
 
 .col img {
     width: 100%;
     height: 100%;
-    margin: 5px;
+    margin: 10px;
 }
 
 .image-grid {
